# vignanlms

./: .breakpoints  .replit  LICENSE  PyWhatKit_DB.txt  README.md  app.py  database.py  just.py  pyproject.toml  requirements.txt  ssss.py
templates/: assignmnts.html  attendence.html  attsub.html  button.html  evaluation.html  evaluation_table.html  faculty.html  homepage.html  loginpage.html  projectlogin.html  student.html  table.html
